Backend | Add Endpoint for single double tournaments
